<resources>
    <string name="app_name">calculator</string>
    <string name="action_settings">Settings</string>
    <string name="Button1">1</string>
    <string name="Button2">2</string>
    <string name="Button3">3</string>
    <string name="Button4">4</string>
    <string name="Button5">5</string>
    <string name="Button6">6</string>
    <string name="Button7">7</string>
    <string name="Button8">8</string>
    <string name="Button9">9</string>
    <string name="Button0">0</string>
    <string name="op1">Option 1</string>
    <string name="op2">Option 2</string>
</resources>
