<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
    <Button android:id="@+id/Button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Button1" />
    <Button android:id="@+id/Button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Button2" />
    <Button android:id="@+id/Button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Button3" />
    </LinearLayout>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <Button android:id="@+id/Button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Button4" />
        <Button android:id="@+id/Button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Button5" />
        <Button android:id="@+id/Button6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Button6"/>
    </LinearLayout>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <Button android:id="@+id/Button7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Button7" />
        <Button android:id="@+id/Button8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Button8" />
        <Button android:id="@+id/Button9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Button9" />
    </LinearLayout>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <Button android:id="@+id/Button0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Button0" />
    </LinearLayout>
</LinearLayout>